# hdb-resale-agentic-mlops

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  hdb-resale-candidate-training-local-colab.ipynb  pyproject.toml
docs/: beginner-end-to-end-guide.md
src/: requirements.txt  train.py
src/hdb_resale_mlops/: __init__.py  comparison.py  config.py  data.py  demo.py  drift.py  env.py  eval_judge.py  evaluation.py  explainer.py  features.py  local_training.py  mlflow_registry.py  policy.py  promotion_workflow.py  sagemaker_job.py  sagemaker_pipeline.py  tabular_state.py  training_entrypoint.py
src/pipeline_steps/: evaluate_register.py  policy_gate.py  prepare_data.py  requirements.txt
tests/: test_comparison.py  test_config.py  test_data.py  test_demo.py  test_drift.py  test_env.py  test_eval_judge.py  test_evaluation.py  test_explainer.py  test_explainer_integration.py  test_explainer_live.py  test_explainer_tools.py  test_features.py  test_local_training.py  test_mlflow_registry.py  test_notebook_alignment.py  test_policy.py  test_promotion_workflow.py  test_report_quality.py  test_sagemaker_job.py  test_sagemaker_pipeline.py  test_smoke.py  test_workflow_integration.py
tests/fixtures/eval_scenarios/: manual_review_drift.json  manual_review_segment_regression.json  promote_no_champion.json  promote_with_champion.json  reject_high_rmse.json
