[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hdb-resale-mlops"
version = "0.1.0"
description = "Notebook-first HDB resale price MLOps with MLflow, drift checks, deterministic promotion policy, and agentic model review."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.4,<2",
  "mlflow>=3.10.1,<4",
  "numpy>=1.26,<2",
  "pandas>=2.1,<2.2",
  "requests>=2.32,<3",
  "scikit-learn>=1.5,<2",
  "xgboost>=2.1,<3",
]

[project.optional-dependencies]
notebook = [
  "ipykernel>=6,<7",
  "notebook>=7,<8",
]
agent = [
  "langchain>=0.3,<1",
  "langchain-core>=0.3,<1",
  "langchain-openai>=0.3,<1",
  "langgraph>=0.4,<1",
  "tavily-python>=0.5,<1",
]
sagemaker = [
  "boto3>=1.35,<2",
  "sagemaker>=2.240,<3",
]
dev = [
  "pytest>=8,<9",
]
all = [
  "hdb-resale-mlops[agent,sagemaker,dev,notebook]",
]

[project.scripts]
hdb-resale-demo = "hdb_resale_mlops.demo:main"

[tool.pytest.ini_options]
markers = [
  "requires_llm: opt-in LLM-backed report-quality tests",
  "slow: tests that are slow or expensive to run",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
